homepage.css
h3.PD-title {
    color: #B60202;
}

.PD-featured {
    max-width:960px;
    padding:5px;
}

.PD-featured article {
    width:150px;
    display:inline-block;
    margin: 12px 0px 0px 0px;
    padding: 0;
    
    border: 1px solid rgba(0, 0, 0, 0.22);
    box-sizing: border-box;
}

.PD-featured h4 {
    text-align:center;
    font-size:1.2em;
    background:#ddd;
    padding: 0.3em 0em;

}

.PD-featured h4 a, .PD-featured strong a {
    text-decoration:none;
}

.PD-featured strong {
    text-align: center;
    display: block;
    color: #B60202;
    position: relative;
    bottom: 5px;
}

.PD-featured img {
    text-align:center;
    max-width: 88%;
    height: auto;
    margin: 0 auto;
    display: block;
    padding: 0 5%;
}

.PD-first-time {
    position: relative;
    bottom: 39px;
    font-size: 16px;
    font-weight: 200;
    text-decoration: none;
}

